--- a/index.html
+++ b/index.html
@@ -9,29 +9,145 @@
   <style>
     body {
       background: #101515;
+      margin: 0;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;
+      color: #e6eef0;
     }
 
+    .app {
+      display: flex;
+      height: 100vh;
+      box-sizing: border-box;
+      align-items: center;
+      justify-content: center;
+    }
+
+    /* 左側選單 */
+    #sidebar {
+      width: 220px;
+      padding: 18px;
+      box-sizing: border-box;
+      position: fixed;
+      left: 0;
+      top: 0;
+      bottom: 0;
+      background: rgba(8, 12, 12, 0.9);
+      border-right: 1px solid rgba(255,255,255,0.03);
+      color: #ddd;
+      overflow: auto;
+    }
+
+    #sidebar h3 {
+      margin: 6px 0 12px 0;
+      font-size: 16px;
+    }
+
+    #setList { padding: 0; margin: 0 0 10px 0; }
+    #setList li { list-style: none; padding: 8px 10px; cursor: pointer; border-radius: 4px; margin-bottom: 6px; background: transparent; transition: background 0.15s ease; }
+    #setList li:hover { background: rgba(255,255,255,0.03); }
+    #setList li.active { background: #6ee7b7; color: #042; font-weight: 600; }
+    .hint { font-size: 12px; color: rgba(230,238,240,0.7); margin-top: 8px; }
+
+    /* 主區塊（放 canvas） */
+    #main { margin-left: 240px; display: flex; align-items: center; justify-content: center; width: calc(100% - 240px); height: 100vh; }
+
     #glslCanvas {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
+      max-width: 90vw;
+      max-height: 80vh;
+      width: 900px;
+      height: 600px;
+      display: block;
+      box-shadow: 0 6px 30px rgba(0,0,0,0.6);
+      background: transparent;
     }
   </style>
 </head>
 
 <body>
-  <canvas id="glslCanvas" data-fragment-url="shaders/hybrid_image_v2.frag" width="900" height="600"
-    data-textures="data/high.png, data/low.jpg"></canvas>
+  <div class="app">
+    <aside id="sidebar">
+      <h3>Image sets</h3>
+      <ul id="setList">
+        <li data-set="0" class="active">Set 1 — high.png, low.jpg</li>
+        <li data-set="1">Set 2 — high2.png, low2.jpg</li>
+        <li data-set="2">Set 3 — high3.png, low3.jpg</li>
+        <li data-set="3">Set 4 — high4.png, low4.jpg</li>
+      </ul>
+      <p class="hint">點選切換貼圖組 (共 4 組)</p>
+    </aside>
+    <main id="main">
+      <canvas id="glslCanvas" data-fragment-url="shaders/hybrid_image_v2.frag" width="900" height="600"
+        data-textures="data/high.png, data/low.jpg"></canvas>
+    </main>
+  </div>
 </body>
 <script>
-  var canvas = document.getElementById("glslCanvas");
-  var sandbox = new GlslCanvas(canvas);
-  var texCounter = 0;
-  var sandbox_content = "";
-  var sandbox_title = "";
-  var sandbox_author = "";
-  var sandbox_thumbnail = "";
+  // 初始化與切換邏輯都放在 DOMContentLoaded 以確保元素與資源已就緒
+  window.addEventListener('DOMContentLoaded', function () {
+    var canvas = document.getElementById('glslCanvas');
+    if (!canvas) {
+      console.error('glslCanvas not found');
+      return;
+    }
+
+    // 建立 sandbox 並將其放到 window 以便在 console 測試
+    try {
+      window.sandbox = new GlslCanvas(canvas);
+    } catch (e) {
+      console.error('Failed to initialize GlslCanvas:', e);
+      return;
+    }
+
+    // 定義 4 組貼圖（每組兩張），請確保這些檔案存在於 data/ 下或自行改路徑
+    var textureSets = [
+      ['data/high.png', 'data/low.jpg'],
+      ['data/high2.png', 'data/low2.jpg'],
+      ['data/high3.png', 'data/low3.jpg'],
+      ['data/high4.png', 'data/low4.jpg']
+    ];
+
+    var setList = document.getElementById('setList');
+    var items = setList.querySelectorAll('li');
+
+    function setActive(index) {
+      items.forEach(function (it) { it.classList.remove('active'); });
+      var el = setList.querySelector('li[data-set="' + index + '"]');
+      if (el) el.classList.add('active');
+    }
+
+    function loadSet(index) {
+      index = Math.max(0, Math.min(textureSets.length - 1, index));
+      var paths = textureSets[index];
+      // GlslCanvas 使用 setUniform 來載入 sampler2D (會呼叫 loadTexture)
+      // 預設 shader 可能用的是 u_tex0, u_tex1，原先 data-textures 也用這個命名
+      if (window.sandbox && window.sandbox.setUniform) {
+        window.sandbox.setUniform('u_tex0', paths[0]);
+        window.sandbox.setUniform('u_tex1', paths[1]);
+        console.info('Loaded texture set', index, paths);
+      } else {
+        console.warn('sandbox not ready yet');
+      }
+      setActive(index);
+    }
+
+    // 綁定點擊事件
+    items.forEach(function (li) {
+      li.addEventListener('click', function () {
+        var idx = parseInt(li.getAttribute('data-set'), 10);
+        loadSet(idx);
+      });
+    });
+
+    // 預設載入第一組
+    loadSet(0);
+
+    // 保留原來的變數供其他程式邏輯使用（如果需要）
+    var texCounter = 0;
+    var sandbox_content = "";
+    var sandbox_title = "";
+    var sandbox_author = "";
+    var sandbox_thumbnail = "";
+  });
 </script>
 
 </html>
