--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <aside id="sidebar">
       <h3>Image sets</h3>
       <ul id="setList">
-        <li data-set="0" class="active">Set 1 — high.png, low.jpg</li>
+        <li data-set="0" class="active">Set 1 — high1.png, low1.jpg</li>
         <li data-set="1">Set 2 — high2.png, low2.jpg</li>
         <li data-set="2">Set 3 — high3.png, low3.jpg</li>
         <li data-set="3">Set 4 — high4.png, low4.jpg</li>
@@ -100,7 +100,7 @@
 
     // 定義 4 組貼圖（每組兩張），請確保這些檔案存在於 data/ 下或自行改路徑
     var textureSets = [
-      ['data/high.png', 'data/low.jpg'],
+      ['data/high1.png', 'data/low1.jpg'],
       ['data/high2.png', 'data/low2.jpg'],
       ['data/high3.png', 'data/low3.jpg'],
       ['data/high4.png', 'data/low4.jpg']
