upload_low_images

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <body>
   <div class="app">
     <aside id="sidebar">
-      <h3>Image sets</h3>
+      <h3>Déjà vu Image sets</h3>
       <ul id="setList">
         <li data-set="0" class="active">Set 1 — 台北 / 京都近郊 </li>
         <li data-set="1">Set 2 — 鄰暗時刻 </li>
